--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiosqlite==0.18.0
 anyio==3.6.2
+-e git+https://github.com/NSICSS-SARL/fastapi-only.git@0e02b73c02d520bd47f737acadd8753773889ffd#egg=app
 asgiref==3.6.0
 bcrypt==4.0.1
 certifi==2022.12.7
@@ -9,7 +10,7 @@ click==8.1.3
 colorama==0.4.6
 cryptography==39.0.0
 databases==0.7.0
-dnspython==2.2.1
+dnspython==2.3.0
 ecdsa==0.18.0
 email-validator==1.3.0
 fastapi==0.89.1
