--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["patrickezway <patrick@ezway-technology.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
 uvicorn = "^0.20.0"
 fastapi = {extras = ["all"], version = "^0.89.1"}
 fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
@@ -24,6 +24,11 @@ click = "^8.1.3"
 dnspython = "^2.3.0"
 h11 = "^0.14.0"
 pymongo = "^4.3.3"
+asyncmy = "^0.2.5"
+aiosql = "^7.2"
+pika = "^1.3.1"
+celery = "^5.2.7"
+mysqlclient = "^2.1.1"
 
 
 
