--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+aiosql==7.2
 aiosqlite==0.18.0
+amqp==5.1.1
 anyio==3.6.2
--e git+https://github.com/NSICSS-SARL/fastapi-only.git@0e02b73c02d520bd47f737acadd8753773889ffd#egg=app
 asgiref==3.6.0
+asyncmy==0.2.5
 bcrypt==4.0.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
 click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.6
 cryptography==39.0.0
 databases==0.7.0
@@ -26,11 +33,16 @@ httpx-oauth==0.10.2
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.2.4
 makefun==1.15.0
 mangum==0.17.0
 MarkupSafe==2.1.1
+mysqlclient==2.1.1
 orjson==3.8.5
 passlib==1.7.4
+pika==1.3.1
+prompt-toolkit==3.0.36
+psycopg2==2.9.5
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.10.4
@@ -39,6 +51,7 @@ pymongo==4.3.3
 python-dotenv==0.21.0
 python-jose==3.3.0
 python-multipart==0.0.5
+pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
 rfc3986==1.5.0
@@ -51,5 +64,7 @@ typing_extensions==4.4.0
 ujson==5.7.0
 urllib3==1.26.14
 uvicorn==0.20.0
+vine==5.0.0
 watchfiles==0.18.1
+wcwidth==0.2.6
 websockets==10.4
