--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,34 @@
 [tool.poetry]
 name = "app"
-version = "0.1.0"
+
+version = "0.1.1"
 description = ""
 authors = ["patrickezway <patrick@ezway-technology.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-uvicorn = "^0.20.0"
-fastapi = {extras = ["all"], version = "^0.89.1"}
-fastapi-users = {extras = ["sqlalchemy"], version = "^10.2.1"}
-aiosqlite = "^0.18.0"
-databases = {extras = ["sqlite"], version = "^0.7.0"}
+uvicorn = "^0.23.2"
+fastapi = {extras = ["all"], version = "^0.103.2"}
+aiosqlite = "^0.19.0"
+databases = {extras = ["sqlite"], version = "^0.8.0"}
 python-dotenv = "^0.21.0"
-python-multipart = "^0.0.5"
+python-multipart = "^0.0.6"
 jinja2 = "^3.1.2"
-pyjwt = "^2.6.0"
+pyjwt = "^2.8.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-sqlalchemy = "^1.4.46"
 mangum = "^0.17.0"
-asgiref = "^3.6.0"
-click = "^8.1.3"
-dnspython = "^2.3.0"
+asgiref = "^3.7.2"
+click = "^8.1.7"
+dnspython = "^2.4.2"
 h11 = "^0.14.0"
-pymongo = "^4.3.3"
-asyncmy = "^0.2.5"
-aiosql = "^7.2"
-pika = "^1.3.1"
-celery = "^5.2.7"
-mysqlclient = "^2.1.1"
+pymongo = "^4.5.0"
+asyncmy = "^0.2.8"
+aiosql = "^9.0"
+pika = "^1.3.2"
+celery = "^5.3.4"
+mysqlclient = "^2.2.0"
+fastapi-users = "^12.1.2"
 
 
 
