--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,67 @@
-aiosql==7.2
-aiosqlite==0.18.0
+aiosql==9.0
+aiosqlite==0.19.0
 amqp==5.1.1
-anyio==3.6.2
-asgiref==3.6.0
-asyncmy==0.2.5
+annotated-types==0.6.0
+anyio==3.7.1
+-e git+https://github.com/NSICSS-SARL/fastapi-backend.git@c0ef3941b3f23b7ebd4cfc19ec765fa302b6bacb#egg=app
+asgiref==3.7.2
+asyncmy==0.2.8
 bcrypt==4.0.1
-billiard==3.6.4.0
-celery==5.2.7
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
-click==8.1.3
+billiard==4.1.0
+celery==5.3.4
+certifi==2023.7.22
+cffi==1.16.0
+click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
-click-repl==0.2.0
+click-repl==0.3.0
 colorama==0.4.6
-cryptography==39.0.0
-databases==0.7.0
-dnspython==2.3.0
-ecdsa==0.18.0
-email-validator==1.3.0
-fastapi==0.89.1
-fastapi-login==1.8.3
-fastapi-users==10.2.1
+cryptography==41.0.4
+databases==0.8.0
+dnspython==2.4.2
+email-validator==2.0.0.post2
+fastapi==0.103.2
+fastapi-users==12.1.2
 fastapi-users-db-sqlalchemy==4.0.3
-greenlet==2.0.1
+greenlet==3.0.0
 h11==0.14.0
-httpcore==0.16.3
-httptools==0.5.0
-httpx==0.23.3
-httpx-oauth==0.10.2
+httpcore==0.18.0
+httptools==0.6.1
+httpx==0.25.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-kombu==5.2.4
-makefun==1.15.0
+kombu==5.3.2
+makefun==1.15.1
 mangum==0.17.0
-MarkupSafe==2.1.1
-mysqlclient==2.1.1
-orjson==3.8.5
+MarkupSafe==2.1.3
+mysqlclient==2.2.0
+orjson==3.9.9
 passlib==1.7.4
-pika==1.3.1
-prompt-toolkit==3.0.36
-psycopg2==2.9.5
-pyasn1==0.4.8
+pika==1.3.2
+prompt-toolkit==3.0.39
 pycparser==2.21
-pydantic==1.10.4
-PyJWT==2.6.0
-pymongo==4.3.3
-python-dotenv==0.21.0
-python-jose==3.3.0
-python-multipart==0.0.5
+pydantic==2.4.2
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+pydantic_core==2.10.1
+PyJWT==2.8.0
+pymongo==4.5.0
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+python-multipart==0.0.6
 pytz==2022.7.1
-PyYAML==6.0
-requests==2.28.2
+PyYAML==6.0.1
 rfc3986==1.5.0
-rsa==4.9
 six==1.16.0
 sniffio==1.3.0
-SQLAlchemy==1.4.46
-starlette==0.22.0
-typing_extensions==4.4.0
-ujson==5.7.0
-urllib3==1.26.14
-uvicorn==0.20.0
+SQLAlchemy==1.4.49
+starlette==0.27.0
+typing_extensions==4.8.0
+tzdata==2023.3
+ujson==5.8.0
+uvicorn==0.23.2
 vine==5.0.0
-watchfiles==0.18.1
-wcwidth==0.2.6
-websockets==10.4
+watchfiles==0.21.0
+wcwidth==0.2.8
+websockets==11.0.3
